--- a/WebContent/WEB-INF/html/stage/index.html
+++ b/WebContent/WEB-INF/html/stage/index.html
@@ -58,6 +58,8 @@
 		})
 		// 导航栏结束
 
+		$(".backgroundimg").attr("src",getUrl()+"/image/background.jpg");
+		$(".bar_logo").attr("src",getUrl()+"/image/logo.png");
 	})
 	function createPost() {
 		var content = $("#ueditor_textarea_editorValue").val();
